--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,7 @@
 {
   "references": [
-    { "path": "app-package" },
-    { "path": "library-package" }
-    
+    { "path": "library-package" },
+    { "path": "app-package" }
   ],
   "include": []
 }
